// Vitest Snapshot v1

exports[`SanityContent > should render blockquote blocks 1`] = `"<blockquote>Build your next Vue.js application with confidence using <a href=\\"https://nuxtjs.org\\">NuxtJS</a>. An open source framework making web development simple and powerful.</blockquote>"`;

exports[`SanityContent > should render customBlockTypes blocks 1`] = `"<p>An example of <i>custom</i> block types.</p>"`;

exports[`SanityContent > should render exampleMarkDefs blocks 1`] = `
"<ul>
  <li><strong>Google Analytics</strong>: The Sites use Google Analytics. Further information is available at <a href=\\"https://tools.google.com/dlpage/gaoptout/\\">https://tools.google.com/dlpage/gaoptout/</a>.</li>
</ul>"
`;

exports[`SanityContent > should render heading blocks 1`] = `"<h3>3. Providing your personal data to others</h3>"`;

exports[`SanityContent > should render link blocks 1`] = `"<a href=\\"http://test.com/\\"></a>"`;

exports[`SanityContent > should render list blocks 1`] = `
"<ol>
  <li>test</li>
  <li>thing</li>
</ol>"
`;

exports[`SanityContent > should render nestedList blocks 1`] = `
"<h3>3. Providing your personal data to others</h3>
<ol>
  <li>test</li>
  <li>thing</li>
  <ul>
    <li>nested</li>
    <li>list</li>
  </ul>
</ol>"
`;

exports[`SanityContent > should render strong blocks 1`] = `"<p>An example of <strong>bold</strong> text and <strong>another</strong>.</p>"`;

exports[`SanityContent > should render with no props 1`] = `""`;
